apps/headscale/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: headscale
spec:
  selector:
    app: headscale
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: metrics
      port: 9090
      targetPort: metrics
    - name: grpc
      port: 50443
      targetPort: grpc
    - name: stun
      port: 3478
      targetPort: stun
      protocol: UDP
